set allow origins in env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 GEMINI_MODEL_ID=gemini-1.5-flash # Or gemini-1.5-pro, gemini-2.0-flash, etc. based on availability and preference
+
+ALLOW_ORIGINS=http://localhost:5173
