replace legacy google-generativeai with google-genai library and update request with json response schema config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - ./backend:/app/backend
     ports:
       - "8000:8000"
+    environment:
+      GOOGLE_API_KEY: ${GOOGLE_API_KEY}
